<resources>
    <string name="app_name">BamboozApp</string>
    <string name="google_maps_key">AIzaSyAwGI6KWqs4QhUfJnOwWD1XyyAVNaO68kA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Page Accueil -->
    <string name="button_login">S\'identifier</string>
    <string name="button_logout">Créer un compte</string>
    <string name="label_welcome">Bienvenue</string>

    <!-- Page Login -->
    <string name="label_last_name">Nom</string>
    <string name="label_first_name">Prénom</string>
    <string name="label_mail">Adresse e-mail</string>
    <string name="label_password">Mot de passe</string>
    <string name="button_login_action">Se connecter</string>

    <!-- Page Profile -->

</resources>