<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/bambooz_orange">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="50dp"

    android:background="@drawable/bambooz_button_round"
    android:backgroundTint="@color/white">


    <LinearLayout
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/label_first_name"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstName"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/label_last_name"
            android:paddingStart="20dp"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastName"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/label_mail"
            android:paddingStart="20dp"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/mail"
        android:id="@+id/password">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/label_password"
            android:paddingStart="20dp"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bambooz_button_round"
            android:text="@string/button_logout" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:text="@string/button_login_action" />

    </LinearLayout>


</RelativeLayout>

</RelativeLayout>