<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/label_mail"
            android:paddingStart="20dp"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/buttons"
        android:orientation="vertical"
        android:id="@+id/password">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/label_password"
            android:paddingStart="20dp"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/buttons">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="20dp"
            android:text="@string/button_login_action"
            android:background="@drawable/bambooz_button_round"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/button_logout"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bambooz_button_round"/>

    </LinearLayout>
</RelativeLayout>